--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <!-- header and navigation -->
+    <header>
+        <h1>Taskinator</h1>
+        <p>Click the button below to add a new task!</p>
+        <button class="btn">Add Task</button>
+    </header>
+    <!-- main section -->
+    <main>
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
+
     <script src="./Assets/js/script.js"></script>
 </body>
 
