--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 <body>
     <!-- header and navigation -->
     <header>
-        <h1>Taskinator</h1>
+        <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
         <button class="btn">Add Task</button>
     </header>
     <!-- main section -->
-    <main>
-
+    <main class="page-content">
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks To Do</h2>
+            <ul class="task-list">
+                <li class="task-item">A task is going to be added soon!</li>
+            </ul>
+        </section>
     </main>
 
     <!-- footer -->
     <footer>
-
+        &copy;2020 by Taskinator
     </footer>
 
     <script src="./Assets/js/script.js"></script>
